--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "dg-utils": "*",
     "mapbox-gl": "^0.45.0",
+    "ramda": "^0.25.0",
     "request": "^2.87.0",
-    "seq": "^0.3.5"
+    "seq": "^0.3.5",
+    "turf": "^3.0.14"
   },
   "devDependencies": {
     "http-server": "*",
